testdata/kustomize/overlays/prod/canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-canary
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: api
    track: canary
