testdata/kustomize/overlays/prod/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: prod
resources:
  - ../../base
  - canary.yaml
patches:
  - path: vs-canary.yaml
    target:
      kind: VirtualService
      name: shop-routes
